tests/invalid_ast_samples/00d09cb4bde4e8e66bef022dfa684fa3e11b6cdf49e361d591a4799244ab70ca.py
from ast import Import
from ast import Module

tree = Module(body=[Import(names=[])], type_ignores=[])

# version: 3.9.15
# seed = 4634023
#
# Source:
# import
#
#
# Error:
#     SyntaxError('invalid syntax', ('<file>', 1, 8, 'import \n'))
